Fix display errors on firefox and edge

--- a/src/components/searchBar/searchBar.module.css
+++ b/src/components/searchBar/searchBar.module.css
@@ -27,7 +27,7 @@
     margin: auto;
     width: 45%;
     max-width: 500px;
-    min-width: 300px;
+    min-width: 250px;
     position: relative;
 }
 
